--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -175,6 +175,13 @@
             <version>4.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+
+
         <!-- Plugin dependencies -->
         <dependency>
             <groupId>net.citizensnpcs</groupId>
