--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -67,7 +67,6 @@
 
 
     <repositories>
-
         <repository>
             <id>phoenix</id>
             <url>http://la-grange-evasion.pro.dns-orange.fr:8081/repository/maven-public/</url>
@@ -181,7 +180,6 @@
             <version>3.6.1</version>
         </dependency>
 
-
         <!-- Plugin dependencies -->
         <dependency>
             <groupId>net.citizensnpcs</groupId>
@@ -193,8 +191,8 @@
 
         <dependency>
             <groupId>org.mcmonkey</groupId>
-            <artifactId>sentinel</artifactId>
-            <version>2.5.0-SNAPSHOT</version>
+            <artifactId>Sentinel</artifactId>
+            <version>2.6.0</version>
             <type>jar</type>
             <scope>provided</scope>
             <exclusions>
@@ -289,7 +287,6 @@
             <artifactId>spigot-1.13.2</artifactId>
             <version>dev</version>
             <scope>provided</scope>
-            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -319,7 +316,7 @@
         <dependency>
             <groupId>com.sainttx.holograms</groupId>
             <artifactId>Holograms</artifactId>
-            <version>2.9.1</version>
+            <version>2.13</version>
             <scope>provided</scope>
         </dependency>
 
@@ -334,7 +331,7 @@
         <dependency>
             <groupId>me.arasple.mc</groupId>
             <artifactId>TrHologram</artifactId>
-            <version>1.11</version>
+            <version>2.2</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
@@ -350,22 +347,21 @@
         <dependency>
             <groupId>com.gmail.nossr50</groupId>
             <artifactId>mcMMO</artifactId>
-            <version>2.1.104</version>
+            <version>2.1.209</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.Zrips</groupId>
             <artifactId>CMILib</artifactId>
-            <version>1.0.3.6</version>
+            <version>1.2.2.0</version>
             <scope>provided</scope>
-            <optional>true</optional>
         </dependency>
 
         <dependency>
             <groupId>com.bekvon.bukkit.residence</groupId>
             <artifactId>Residence</artifactId>
-            <version>4.8.7.2</version>
+            <version>5.0.1.7</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
@@ -398,7 +394,7 @@
         <dependency>
             <groupId>com.evill4mer</groupId>
             <artifactId>RealDualWield</artifactId>
-            <version>1.1.12</version>
+            <version>1.1.36</version>
             <scope>provided</scope>
         </dependency>
 
