--- a/v1_19/pom.xml
+++ b/v1_19/pom.xml
@@ -53,6 +53,13 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>mojang</id>
+            <url>https://libraries.minecraft.net/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>io.lumine</groupId>
