--- a/v1_19/pom.xml
+++ b/v1_19/pom.xml
@@ -65,7 +65,7 @@
             <groupId>io.lumine</groupId>
             <artifactId>mythiclib-plugin</artifactId>
             <version>${revision}</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -86,6 +86,7 @@
             <groupId>com.mojang</groupId>
             <artifactId>brigadier</artifactId>
             <version>1.0.18</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
