--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -57,16 +57,8 @@
             <url>https://la-grange-evasion.pro.dns-orange.fr/repository/maven-public/</url>
         </repository>
         <repository>
-            <id>nexus</id>
-            <url>https://mvn.lumine.io/repository/maven-public/</url>
-        </repository>
-        <repository>
             <id>lumine</id>
-            <url>https://mvn.lumine.io/repository/maven-private/</url>
-        </repository>
-        <repository>
-            <id>everything</id>
-            <url>https://repo.citizensnpcs.co/</url>
+            <url>https://mvn.lumine.io/repository/maven-public/</url>
         </repository>
         <repository>
             <id>spigot-repo</id>
@@ -77,36 +69,12 @@
             <url>https://repo.aikar.co/nexus/content/groups/aikar/</url>
         </repository>
         <repository>
-            <id>citizens-repo</id>
-            <url>https://repo.citizensnpcs.co</url>
-        </repository>
-        <repository>
-            <id>codemc-repo</id>
-            <url>https://repo.codemc.io/repository/maven-public/</url>
-        </repository>
-        <repository>
-            <id>dmulloy2-repo</id>
-            <url>https://repo.dmulloy2.net/repository/public/</url>
-        </repository>
-        <repository>
-            <id>papermc</id>
-            <url>https://papermc.io/repo/repository/maven-public/</url>
-        </repository>
-        <repository>
             <id>sk89q-repo</id>
             <url>https://maven.enginehub.org/repo/</url>
         </repository>
         <repository>
             <id>hikari-cp</id>
             <url>https://clojars.org/repo/</url>
-        </repository>
-        <repository>
-            <id>mojang</id>
-            <url>https://libraries.minecraft.net/</url>
-        </repository>
-        <repository>
-            <id>jitpack</id>
-            <url>https://jitpack.io</url>
         </repository>
         <repository>
             <id>placeholderapi</id>
@@ -167,8 +135,8 @@
         <!-- Plugin dependencies -->
         <dependency>
             <groupId>net.citizensnpcs</groupId>
-            <artifactId>citizensapi</artifactId>
-            <version>2.0.27-SNAPSHOT</version>
+            <artifactId>Citizens</artifactId>
+            <version>2.0.30-b2571</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
@@ -384,9 +352,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.promcteam</groupId>
-            <artifactId>proskillapi</artifactId>
-            <version>1.1.7.6</version>
+            <groupId>com.sucy.skill</groupId>
+            <artifactId>ProSkillAPI</artifactId>
+            <version>1.1.7.16</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
