--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-clean-plugin</artifactId>
             <version>3.1.0</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
