--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -263,6 +263,14 @@
         </dependency>
 
         <dependency>
+            <groupId>org.inventivetalent</groupId>
+            <artifactId>glowapi</artifactId>
+            <version>1.4.8</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-1.15</artifactId>
             <version>dev</version>
