Configuration option added

--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -172,3 +172,9 @@ fix-movement-speed: true
 damage-particles-cap:
   max-per-tick: 10
   enabled: false
+
+# By enabling this option, the plugin will attempt to fix
+# too large packets sent to the client. This can happen
+# when the recipes are too large and the client cannot
+# handle them.
+fix-too-large-packets: false
