Recipes output lore removed

--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -177,4 +177,5 @@ damage-particles-cap:
 # too large packets sent to the client. This can happen
 # when the recipes are too large and the client cannot
 # handle them.
+# If you change this option value, you must restart your server.
 fix-too-large-packets: false
