--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -176,7 +176,7 @@
         <dependency>
             <groupId>net.citizensnpcs</groupId>
             <artifactId>Citizens</artifactId>
-            <version>2.0.30-b2571</version>
+            <version>2.0.30</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
