HexColor parser & tests

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
         <revision>1.4.3-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <!-- Dependency versions -->
+        <junit.version>5.9.1</junit.version>
     </properties>
 
     <build>
