--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -96,44 +96,37 @@
     </pluginRepositories>
 
     <dependencies>
-
         <!-- Shaded dependencies -->
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
             <version>3.4.5</version>
         </dependency>
-
         <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bukkit</artifactId>
             <version>1.5</version>
         </dependency>
-
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.9.0</version>
         </dependency>
-
         <dependency>
             <groupId>net.kyori</groupId>
             <artifactId>adventure-text-minimessage</artifactId>
             <version>4.11.0</version>
         </dependency>
-
         <dependency>
             <groupId>net.kyori</groupId>
             <artifactId>adventure-text-serializer-legacy</artifactId>
             <version>4.11.0</version>
         </dependency>
-
         <dependency>
             <groupId>net.kyori</groupId>
             <artifactId>adventure-platform-bukkit</artifactId>
             <version>4.1.2</version>
         </dependency>
-
       <!--  <dependency>
             <groupId>net.kyori</groupId>
             <artifactId>adventure-api</artifactId>
@@ -165,13 +158,11 @@
             <version>1.3.0</version>
             <scope>compile</scope>
         </dependency>-->
-
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
             <version>3.6.1</version>
         </dependency>
-
         <!-- Plugin dependencies -->
         <dependency>
             <groupId>net.citizensnpcs</groupId>
@@ -180,7 +171,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.mcmonkey</groupId>
             <artifactId>Sentinel</artifactId>
@@ -195,7 +185,6 @@
             </exclusions>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
@@ -203,7 +192,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>io.lumine</groupId>
             <artifactId>Mythic-Dist</artifactId>
@@ -211,7 +199,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -219,7 +206,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -227,7 +213,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <!-- Spigot API -->
         <dependency>
             <groupId>org.spigotmc</groupId>
@@ -236,7 +221,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <!-- Spigot NMS versions -->
         <dependency>
             <groupId>org.spigotmc</groupId>
@@ -245,7 +229,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-1.16.2</artifactId>
@@ -253,7 +236,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-1.16.1</artifactId>
@@ -261,7 +243,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.inventivetalent</groupId>
             <artifactId>glowapi</artifactId>
@@ -269,7 +250,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-1.15</artifactId>
@@ -277,7 +257,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-1.14</artifactId>
@@ -285,7 +264,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-1.13.2</artifactId>
@@ -293,7 +271,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-1.12.2</artifactId>
@@ -301,7 +278,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <!-- Plugin dependencies -->
         <dependency>
             <groupId>com.comphenix.protocol</groupId>
@@ -310,7 +286,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>com.gmail.filoghost.holographicdisplays</groupId>
             <artifactId>holographicdisplays-api</artifactId>
@@ -318,7 +293,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>com.sainttx.holograms</groupId>
             <artifactId>Holograms</artifactId>
@@ -326,7 +300,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>com.Zrips</groupId>
             <artifactId>CMI</artifactId>
@@ -334,7 +307,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>me.arasple.mc</groupId>
             <artifactId>TrHologram</artifactId>
@@ -342,7 +314,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>cc.javajobs</groupId>
             <artifactId>FactionsBridge</artifactId>
@@ -350,7 +321,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>com.gmail.nossr50</groupId>
             <artifactId>mcMMO</artifactId>
@@ -358,7 +328,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>com.Zrips</groupId>
             <artifactId>CMILib</artifactId>
@@ -366,7 +335,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>eu.decentsoftware</groupId>
             <artifactId>DecentHolograms</artifactId>
@@ -374,7 +342,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>com.bekvon.bukkit.residence</groupId>
             <artifactId>Residence</artifactId>
@@ -382,7 +349,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>com.sk89q.worldguard</groupId>
             <artifactId>worldguard-bukkit</artifactId>
@@ -390,7 +356,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>me.vagdedes.spartan</groupId>
             <artifactId>SpartanAPI</artifactId>
@@ -398,7 +363,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>com.sucy.skill</groupId>
             <artifactId>ProSkillAPI</artifactId>
@@ -406,7 +370,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <!-- Dual wield plugins -->
         <dependency>
             <groupId>com.evill4mer</groupId>
@@ -415,7 +378,6 @@
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
-
         <dependency>
             <groupId>com.ranull</groupId>
             <artifactId>DualWield</artifactId>
@@ -424,5 +386,21 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Tests -->
+
+        <!-- JUnit 5 API -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- JUnit 5 Engine -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
