--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>v1_18_r2</module>
         <module>dist</module>
         <module>v1_19</module>
+        <module>v1_19_r2</module>
     </modules>
     <name>MythicLib</name>
 
