--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
             <artifactId>maven-clean-plugin</artifactId>
             <version>3.1.0</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
