--- a/v1_17/pom.xml
+++ b/v1_17/pom.xml
@@ -75,6 +75,7 @@
             <artifactId>mythiclib-plugin</artifactId>
             <version>${revision}</version>
             <scope>compile</scope>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -83,6 +84,7 @@
             <version>1.17-R0.1-SNAPSHOT</version>
             <classifier>remapped-mojang</classifier>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
