--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>MythicLib</artifactId>
         <groupId>io.lumine</groupId>
-        <version>${revision}</version>
+        <version>1.5.1-SNAPSHOT</version>
     </parent>
 
     <build>
@@ -268,13 +268,6 @@
             <groupId>me.arasple.mc</groupId>
             <artifactId>TrHologram</artifactId>
             <version>2.2</version>
-            <scope>provided</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>cc.javajobs</groupId>
-            <artifactId>FactionsBridge</artifactId>
-            <version>1.3.6</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
