--- a/v1_17/pom.xml
+++ b/v1_17/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>MythicLib</artifactId>
         <groupId>io.lumine</groupId>
-        <version>${revision}</version>
+        <version>1.5.1-SNAPSHOT</version>
     </parent>
 
     <build>
@@ -73,7 +73,7 @@
         <dependency>
             <groupId>io.lumine</groupId>
             <artifactId>mythiclib-plugin</artifactId>
-            <version>${revision}</version>
+            <version>1.5.1-SNAPSHOT</version>
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
