--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -122,6 +122,11 @@
         </dependency>
         <!-- Plugin dependencies -->
         <dependency>
+            <groupId>fr.phoenix</groupId>
+            <artifactId>MMOProfiles</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>net.citizensnpcs</groupId>
             <artifactId>Citizens</artifactId>
             <version>2.0.30</version>
