MythicMobsSkillHandler now allows to make the "auto-targeting" optional on a per-ability basis.
For example, the ATTACK trigger includes the target of the ability being... the entity you attacked.
However, RIGHT_CLICK trigger does not include a target, so if the player was looking at an enemy, the auto-targeting will set this enemy as the target of the skill.

Now one can set in the YML file to make this particular ability leave the Mythic ability target-less:
  auto-target: false

_____
Also adds to the MythicLib config a value to set the default behaviour of all mythic abilities:

abilities:
  mythic-skill-autotarget: true

--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -257,3 +257,14 @@ pvp_interaction_rules:
       party_member: false
       guild_ally: false
       guild_neutral: true
+
+abilities:
+
+  # Custom MM skills, by default, work
+  # similar to the command /mm test cast
+  #
+  # If the Trigger of the skill does not come naturally
+  # with a target (RIGHT CLICK does not), and the player
+  # is looking at an enemy, this enemy will be set as the
+  # target of the skill.
+  mythic-skill-autotarget: true
