--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -105,6 +105,11 @@
             <version>3.4.5</version>
         </dependency>
         <dependency>
+            <groupId>org.apache-extras.beanshell</groupId>
+            <artifactId>bsh</artifactId>
+            <version>2.0b6</version>
+        </dependency>
+        <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bukkit</artifactId>
             <version>1.5</version>
