--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,9 @@
     <description>A hard dependency for the MMO plugins.</description>
 
     <properties>
+        <java.version>21</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <downloadSources>false</downloadSources>
         <downloadJavadocs>false</downloadJavadocs>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
